--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
-      {% if site.show_online_presence %}
+      {% if site.online_presence.show_online_presence %}
         <a href="{{ site.online_presence.kaggle_url }}" class="btn">Kaggle Profile</a>
         <a href="{{ site.online_presence.linkedin_url }}" class="btn">LinkedIn</a>
       {% endif %}
