--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
       {% endif %}
       {% if site.online_presence.show_online_presence %}
         <a href="{{ site.online_presence.kaggle_url }}" class="btn">Kaggle Profile</a>
-        <a href="{{ site.online_presence.linkedin_url }}" class="btn">LinkedIn</a>
+        <a href="{{ site.online_presence.linkedin_url }}" class="btn">LinkedIn Profile</a>
       {% endif %}
     </header>
 
