--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,11 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+        <a href="{{ site.github.repository_url }}" target="_blank" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.online_presence.show_online_presence %}
-        <a href="{{ site.online_presence.kaggle_url }}" class="btn">Kaggle Profile</a>
-        <a href="{{ site.online_presence.linkedin_url }}" class="btn">LinkedIn Profile</a>
+        <a href="{{ site.online_presence.kaggle_url }}" target="_blank" class="btn">Kaggle Profile</a>
+        <a href="{{ site.online_presence.linkedin_url }}" target="_blank" class="btn">LinkedIn Profile</a>
       {% endif %}
     </header>
 
