--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <a href="{{ site.online_presence.linkedin_url }}" target="_blank" class="btn">LinkedIn Profile</a>
       {% endif %}
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" target="_blank" class="btn">GitHub Profile</a>
+        <a href="https://github.com/albansteff" target="_blank" class="btn">GitHub Profile</a>
       {% endif %}
       <a href="https://albansteff.github.io/books" class="btn">DL/ML Books</a>
     </header>
