--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       <a href="https://albansteff.github.io/" class="btn">Home</a>
-      <a href="https://albansteff.github.io/blogposts" class="btn">Things I Learned</a>
+      <a href="https://albansteff.github.io/blogposts" class="btn">Things I've Learned</a>
       {% if site.online_presence.show_online_presence %}
         <a href="{{ site.online_presence.kaggle_url }}" target="_blank" class="btn">Kaggle Profile</a>
         <a href="{{ site.online_presence.linkedin_url }}" target="_blank" class="btn">LinkedIn Profile</a>
